objects/project_cloud__Expense__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deprecated (Expense)</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated (Expenses)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>